# RNGOEngine-Core

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
Editor/: CMakeLists.txt  main.cpp
Editor/EditorAssets/Models/cirno_fumo/: License.txt
Editor/EditorAssets/Models/sphere/: sphere.fbx
Editor/cmake/: Dependencies.cmake
Editor/cmake/EngineUnits/: Systems.cmake  UI.cmake
Editor/include/: Editor.h  TestScene.h
Editor/include/ECS/: EditorSystemContext.h  IEditorSystem.h
Editor/include/ECS/Systems/: FreeFlyCameraSystem.h
Editor/include/UI/: AssetDragAndDrop.h  IDockablePanel.h  PanelInitializer.h  UIContext.h  UIManager.h
Editor/include/UI/Gizmo/: GizmoOperation.h
Editor/include/UI/Managers/: UISelectionManager.h
Editor/include/UI/Panels/: ConsolePanel.h  ContentDrawerPanel.h  DetailsPanel.h  HierarchyPanel.h  IDockablePanel.h  PlayPanel.h  SceneManagementPanel.h  StatsPanel.h  ToolbarPanel.h  ViewportPanel.h
Editor/include/UI/PropertyDrawer/: PropertyDrawers.h
Editor/src/: Editor.cpp
Editor/src/ECS/Systems/: FreeFlyCameraSystem.cpp
Editor/src/UI/: UIManager.cpp
Editor/src/UI/Managers/: UISelectionManager.cpp
Editor/src/UI/Panels/: ConsolePanel.cpp  ContentDrawerPanel.cpp  DetailsPanel.cpp  HierarchyPanel.cpp  PlayPanel.cpp  SceneManagementPanel.cpp  StatsPanel.cpp  ToolbarPanel.cpp  ViewportPanel.cpp
Runtime/: .clang-format  CMakeLists.txt
Runtime/assets/builtin/: UnitCube.fbx  UnitSphere.fbx  Wireframe.glsl  default.mat
Runtime/assets/fallbacks/: InvalidMaterial.mat  InvalidModelLicense.txt  InvalidShader.frag  InvalidShader.glsl  InvalidShader.vert
Runtime/assets/scripts/: test.lua
Runtime/assets/shaders/: default.frag  default.glsl
Runtime/assets/shaders/DrawToScreen/: ScreenQuadShader.frag  ScreenQuadShader.glsl  ScreenQuadShader.vert
Runtime/assets/shaders/ShadowMapping/: DirectionalShadowMap.glsl
Runtime/assets/shaders/includes/: light-definitions.common  lights.common  shadowmapping.common
Runtime/cmake/: CPM.cmake  Dependencies.cmake  EngineUnits.cmake  Testing.cmake
Runtime/cmake/EngineUnits/: AssetManagement.cmake  CollisionSystem.cmake  Components.cmake  Concepts.cmake  Containers.cmake  Data.cmake  Error.cmake  Events.cmake  InputManager.cmake  Layer.cmake  Logging.cmake  Math.cmake  Physics.cmake  Profiling.cmake  RenderAPI.cmake  Rendering.cmake  ResourceManagement.cmake  RuntimeLayers.cmake  Scene.cmake  ScriptCore.cmake  Systems.cmake  Threading.cmake  Utilities.cmake  Windowing.cmake
Runtime/include/: Entrypoint.h
Runtime/include/Application/: Application.h  EngineConfig.h
Runtime/include/Assets/: Asset.h  AssetLoader.h  AssetMetadataStorage.h  AssetMetadataTypes.h  AssetTypeToClass.h
Runtime/include/Assets/AssetDatabase/: AssetDatabase.h  AssetDatabase.tpp
Runtime/include/Assets/AssetFetcher/: AssetFetcher.h
Runtime/include/Assets/AssetImporters/: AssetImporter.h  AssimpModelImporter.h  MaterialImporter.h  ModelAssetImporter.h  ModelImporter.h  OBJModelImporter.h  ObjModelLoader.h  ScriptImporter.h  ShaderAssetImporter.h  TextureAssetImporter.h
Runtime/include/Assets/AssetLoaders/: ShaderLoader.h  TextureLoader.h
Runtime/include/Assets/AssetManager/: AssetManager.h
Runtime/include/Assets/AssetSerializers/: AssetSerializer.h  MaterialAssetSerializer.h  ModelAssetSerializer.h  ScriptAssetSerializer.h  ShaderAssetSerializer.h  TextureAssetSerializer.h
Runtime/include/Assets/AssetTypes/: MaterialAsset.h  ModelAsset.h  ScriptAsset.h  ShaderAsset.h  TextureAsset.h
Runtime/include/Assets/Bootstrapper/: AssetImporterBootstrapper.h
Runtime/include/Assets/Builtin/: BuiltinAssetBootstrapper.h
Runtime/include/Assets/RuntimeAssetRegistry/: RuntimeAssetRegistry.h  RuntimeAssetRegistry.tpp
Runtime/include/Components/: ComponentDeserializers.h  ComponentSerializers.h  Components.h
Runtime/include/Concepts/: Concepts.h
Runtime/include/Data/: FallbackAssets.h  MeshData.h  MouseCodes.h  ThreadType.h
Runtime/include/Data/Shaders/: ShaderDefinition.h  ShaderSpecification.h
Runtime/include/ECS/Components/: ComponentDeserializers.h  ComponentSerializers.h  Components.h
Runtime/include/ECS/Entity/: Entity.h  Entity.inl
Runtime/include/ECS/Systems/: ResourceMap.h  SystemContext.h  SystemScheduler.h
Runtime/include/Errors/: EngineError.h
Runtime/include/EventQueue/: EventQueue.h
Runtime/include/Layer/: Layer.h  LayerStack.h  LayerStack.tpp
Runtime/include/Logging/: LogLevel.h  Logger.h  VectorSink.h
Runtime/include/Math/: BoundingBox.h  Point.h
Runtime/include/Math/2D/: AABB2D.h  Point2D.h
Runtime/include/Math/3D/: AABB3D.h  Point3D.h
Runtime/include/PCH/: PCH.h
Runtime/include/Profiling/: Profiling.h
Runtime/include/Renderer/: DrawQueue.h  IRenderer.h  RenderFeatures.h  RenderID.h  Uniforms.h
Runtime/include/Renderer/API/: RenderAPI.h  RenderTarget.h  RenderThread.h
Runtime/include/Renderer/GLFW/: GLFWRenderer.h
Runtime/include/Renderer/Handles/: MaterialHandle.h  TextureHandle.h
Runtime/include/Renderer/Null/: NullRenderer.h
Runtime/include/Renderer/OpenGL/: OpenGLRenderer.h
Runtime/include/ResourceManager/: ResourceManager.h
Runtime/include/Scene/: Scene.h
Runtime/include/Shader/: ShaderPreprocessor.h
Runtime/include/Systems/: ISystem.h  ResourceMapper.h  SystemContext.h  SystemScheduler.h
Runtime/include/Utilities/: ConstThis.h  EnumDefinitions.h  RNGOAsserts.h
Runtime/include/Window/: IWindow.h
Runtime/include/World/: World.h
Runtime/src/Application/: Application.cpp
Runtime/src/Assets/: Asset.cpp  AssetLoader.cpp
Runtime/src/InputManager/: InputManager.cpp
Runtime/src/Layer/: Layer.cpp  LayerStack.cpp
Runtime/src/Logging/: Logger.cpp
Runtime/src/ResourceManager/: ResourceManager.cpp  ResourceTracker.cpp
Runtime/src/Scene/: Scene.cpp
Runtime/src/Shader/: ShaderPreprocessor.cpp
Runtime/src/Utilities/: ThreadPool.cpp
Runtime/src/Window/: GLFWWindow.cpp
Runtime/src/World/: World.cpp
Runtime/temporarily_disabled/Entity/: Entity.h
cmake/: Dependencies.cmake  (+2 more)
tests/: CMakeLists.txt
tests/QuadTree/: QuadTreeTests.cpp
(+338 files in other folders)
